--- a/src/scss/components/_grid.scss
+++ b/src/scss/components/_grid.scss
@@ -26,10 +26,6 @@
 @if $wire-markup == true {
   .#{$wire-namespace}container {
     @include container();
-    & > .#{$wire-namespace}grid,
-    & > [data-grid] {
-      height: 100%;
-    }
   }
 }
 
